--- a/remove_apache.yml
+++ b/remove_apache.yml
@@ -4,7 +4,9 @@
   become: true
   tasks:
 
-  - name: remove apache2 package
-    dnf:
-      name: httpd
+  - name: remove apache and htop  packages
+    package:
+      name:
+        - httpd
+        - htop
       state: absent
